# workshop2

./: mkdocs.yml  pyproject.toml  schema_df.py
.github/workflows/: CI.yml
app/: etl_infer_schema.py  funcao.py  schema.py
docs/: index.md
tests/: test_func_etl.py  test_funcao_ola_turma.py
