[tool.poetry]
name = "workshop2"
version = "0.1.0"
description = ""
authors = ["Renan Prado <renanpradoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.13"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
taskify = "^0.0.1"
taskipy = "^1.12.2"
pytest = "^8.1.1"
isort = "^5.13.2"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"